--- a/master.css
+++ b/master.css
@@ -75,8 +75,35 @@ position: relative;
     width: 22vh;
     height: 22vh;
   }
+
+  .text-block {
+  padding: 0px 20px 0px 20px !important;
+  font-size: 14pt !important;
+
+  }
 }
 
 img{
   cursor: pointer;
+}
+span{
+display: flex;
+justify-content: center;
+}
+
+.container {
+    position: relative;
+}
+
+
+.text-block {
+  font-size: 24pt;
+    position: absolute;
+    bottom: -10px;
+    right: 65px;
+    border-radius: 50%;
+    color: white;
+    padding: 0px 50px 0px 20px;
+    /* background-color: rgba(161, 198, 208, 0.72); */
+
 }
